# Physical-AI-Humanoid-Robotics-

./: .gitignore  404.html  feature_desc.txt  index.html  sitemap.xml
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assets/css/: styles.7eca58cf.css
assets/js/: 01a85c17.879dedaf.js  01e44f1d.f9450c8b.js  09c99c03.4265bfd0.js  0bf1e00d.9e896d96.js  0e384e19.215c3c59.js  0e7aec6d.53cfccc8.js  14ef9638.5de37602.js  174141af.3169e665.js  1746.0c40c52a.js  17896441.07d86c80.js  1f391b9e.1e92e49f.js  204ef039.e92d1bd1.js  2055.b3f5dbe6.js  2130.45ec08bd.js  2279.86be6603.js  2291.68f7eebf.js  2334.3067a4fd.js  2492.b08868a1.js  25c3a57c.854715fb.js  2821.cade6a5c.js  3157b112.b5852f33.js  33fc5bb8.2f5f45c8.js  3624.f067ce17.js  3633fe9a.aac217b8.js  3815.98dd58a2.js  393be207.d57eaa40.js  3b519873.9b686a3a.js  3bcc134b.1394cbe0.js  4106a9a6.79b31a12.js  4616.ed594fab.js  4802.291c0032.js  4981.efeb6c8f.js  4ba9c670.20eec664.js  4da1a530.32ae7b16.js  54a7094a.52dc8169.js  59362658.676c1888.js  5955.566ec34a.js  5996.9072e683.js  5b13afd8.fbad80fc.js  5b97b39e.7600141c.js  (+60 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/welcome/: index.html
docusaurus/: docusaurus.config.js  package-lock.json  sidebars.js
markdown-page/: index.html
rag_pipeline/: .env.example  README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  retrieval.py  verify_qdrant.py
(+178 files in other folders)
